--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,8 +1,8 @@
 
-@media screen and (max-width:320px){
+@media screen and (max-width:360px){
 
     html{
-        font-size: 32px!important;
+        font-size: 36px!important;
     }
 }
 
@@ -32,6 +32,7 @@ img,button,input {
 }
 a{
     text-decoration: none;
+    color: #666;
 }
 .clearfix::after,.clearfix::before {
     visibility: hidden;
@@ -48,7 +49,7 @@ a{
 body {
     padding: 0;
     margin: 0 auto;
-    min-width: 320px;
+    min-width: 360px;
     max-width: 540px;
     background: #fff;
     font-size: 14px!important;
@@ -61,4 +62,8 @@ body {
 
 .hotpink{
     color: hotpink;
+}
+
+html,body{
+    scroll-behavior:smooth
 }
